draw interface, favicon, new championship confirm button, update to Java 17 and log4j 2.22